kubernetes/apps/observability/blackbox-exporter/app/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blackbox-exporter
  namespace: observability
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "blackbox-exporter.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: blackbox-exporter
          port: 9115
